<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/shape_background"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_subject_teacher"
            style="@style/tv.large"
            android:layout_marginStart="50dp"
            android:text="@string/subject_teacher_recruitment"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_domicile_teacher"
            style="@style/tv.medium"
            android:layout_marginStart="50dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_subject_teacher"
            android:text="@string/domicile_teacher" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_status_teacher"
            style="@style/tv.small"
            android:layout_marginStart="50dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_domicile_teacher"
            android:text="@string/status_teacher_recruitment" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_item_cancel"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="325dp"
            tools:layout_editor_absoluteY="5dp" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_item_editpencil"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="280dp"
            tools:layout_editor_absoluteY="5dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
