<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="69dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="250dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/ic_group_77" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_logo_school"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            tools:src="@color/logoschool" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_name_school_profil"
            android:layout_width="193dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/name_school_profil"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_email_school_profil"
            android:layout_width="149dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/email_school_profil"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="60dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_avatar_teacher">


            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Nama"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Kepala Sekolah   "
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_headmaster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="-"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Alamat"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No.Telp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_telp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp">

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Website"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_web"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </TableRow>

        </TableLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_changeprofil"
            android:layout_width="215dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:cropToPadding="false"
            android:src="@drawable/shape_background"
            android:text="@string/changeprofil"
            android:textAllCaps="false"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_change_account"
            android:layout_width="215dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:cropToPadding="false"
            android:src="@drawable/shape_background"
            android:text="Ubah Akun"
            android:textAllCaps="false"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_logout"
            android:layout_width="215dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/white"
            android:cropToPadding="false"
            android:src="@drawable/shape_background"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>